Kubernetes/scratch/kube/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scratch 
  labels:
    app: scratch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scratch
  template:
    metadata:
      labels:
        app: scratch
    spec:
      containers:
      - name: scratch
        image: i_scratch:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
