Kubernetes/scratch/kube/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scratch-service
  namespace: default
  labels:
    app: scratch

spec:
  selector:
    app: scratch
  ports: 
    - protocol: TCP 
      port: 8080  
      targetPort: 8080 
  type: LoadBalancer
