Kubernetes/scratch/kube/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scratch-ingress
  labels:
    app: scratch
    namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: home.scratch
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: scratch-service
                port:
                  number: 8080
